# inc-vs-tgt

./: .gitignore  README.md
.github/workflows/: build.yml
inc/: CMakeLib1.txt  CMakeLib2.txt  CMakeLists.txt  README.md  lib1.cpp  lib2.cpp
tgt/: CMakeLib1.txt  CMakeLib2.txt  CMakeLists.txt  README.md  lib1.cpp  main.cpp
tgt/includes/lib1/: lib1.h
tgt/includes/lib2/: lib2.h
