CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
PROJECT("Includes")

INCLUDE(CMakeLib1.txt)
INCLUDE(CMakeLib2.txt)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LIB1_CXX_FLAGS} ${LIB2_CXX_FLAGS}")

ADD_EXECUTABLE(
	product

	main.cpp
)

TARGET_LINK_LIBRARIES(
	product

	${LIB1_CXX_LIBS}
	${LIB2_CXX_LIBS}
)

INCLUDE_DIRECTORIES(
	${LIB1_INCLUDE_DIRS}
	${LIB2_INCLUDE_DIRS}
)
